[gd_scene load_steps=44 format=3 uid="uid://7qsog2ljagsn"]

[ext_resource type="Script" uid="uid://d1sdisl8l3l5q" path="res://Players/Swift Roll/player.gd" id="1_ejbkl"]
[ext_resource type="PackedScene" uid="uid://bccoccqeyvrg3" path="res://Players/Swift Roll/afterimages SR/afterimages.tscn" id="2_42shm"]
[ext_resource type="SpriteFrames" uid="uid://cqc54b0dbeeem" path="res://Players/Swift Roll/Swift_Roll.tres" id="3_op7ga"]
[ext_resource type="PackedScene" uid="uid://dd5bflc6ja565" path="res://Players/Shared stuff/dust_cloud.tscn" id="3_pbfsw"]
[ext_resource type="Script" uid="uid://d1ye78wd5l4y2" path="res://Players/Swift Roll/Camera2D.gd" id="4_pnbbg"]
[ext_resource type="AudioStream" uid="uid://bu4jlng2hm264" path="res://Players/sfx library/00_jump.mp3" id="5_80ayv"]
[ext_resource type="AudioStream" uid="uid://bu4l64ovqf44s" path="res://Players/sfx library/jump_grunt.mp3" id="6_2o4qy"]
[ext_resource type="Texture2D" uid="uid://b41mn0ytjcofg" path="res://ui/ui robo_roller.png" id="6_85s51"]
[ext_resource type="AudioStream" uid="uid://b74njo56015lj" path="res://Players/sfx library/enemybouncesfx.mp3" id="8_fi3wb"]
[ext_resource type="Texture2D" uid="uid://nc5o76ylqkt2" path="res://ui/healthbardamaged.png" id="8_huc6j"]
[ext_resource type="AudioStream" uid="uid://ca4yimlrpjr12" path="res://Players/sfx library/braking.mp3" id="9_p6lsp"]
[ext_resource type="AudioStream" uid="uid://cic0w6ghy62nx" path="res://Players/sfx library/railgrind.mp3" id="11_lo3bv"]
[ext_resource type="AudioStream" uid="uid://c86eeu7keebe8" path="res://Players/sfx library/railcontact.mp3" id="12_tntrf"]
[ext_resource type="Texture2D" uid="uid://dghprnf0nfgv4" path="res://Players/Shared stuff/star outline.png" id="15_4mfyh"]
[ext_resource type="Texture2D" uid="uid://cgynydgs3dur4" path="res://Players/Shared stuff/stardash fire.png" id="16_f7s8f"]
[ext_resource type="AudioStream" uid="uid://c7lqgd0or2aog" path="res://Players/sfx library/wallkick.mp3" id="17_en47m"]
[ext_resource type="Script" uid="uid://djdmkjxmpr4nw" path="res://Players/Swift Roll/scarf_2d.gd" id="17_op7ga"]
[ext_resource type="AudioStream" uid="uid://bkngmxhcg3lbj" path="res://Players/sfx library/dashsfx.mp3" id="18_hkrpb"]
[ext_resource type="Script" uid="uid://bvun0nhvs38g2" path="res://Players/Swift Roll/wallkick_lock_r.gd" id="18_pylmc"]
[ext_resource type="Script" uid="uid://drqtsc3mbdm7q" path="res://Players/Swift Roll/wallkick_lock_l.gd" id="19_pbfsw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4plqc"]
radius = 23.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7l80f"]
radius = 7.64706
height = 36.47059

[sub_resource type="AtlasTexture" id="AtlasTexture_l30vj"]
atlas = ExtResource("6_85s51")
region = Rect2(8, 20, 42, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ywgj"]
atlas = ExtResource("6_85s51")
region = Rect2(58, 48, 42, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mgvm"]
atlas = ExtResource("6_85s51")
region = Rect2(8, 48, 42, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckmtj"]
atlas = ExtResource("6_85s51")
region = Rect2(58, 19, 42, 22)

[sub_resource type="SpriteFrames" id="SpriteFrames_fyifh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l30vj")
}],
"loop": true,
"name": &"skates_off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ywgj")
}],
"loop": true,
"name": &"skates_off pressed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mgvm")
}],
"loop": true,
"name": &"skates_on",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckmtj")
}],
"loop": true,
"name": &"skates_on pressed",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ka1gi"]
atlas = ExtResource("8_huc6j")
region = Rect2(262, 1, 28, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmple"]
atlas = ExtResource("8_huc6j")
region = Rect2(233, 1, 28, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_fk6ll"]
atlas = ExtResource("8_huc6j")
region = Rect2(204, 1, 28, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_r233r"]
atlas = ExtResource("8_huc6j")
region = Rect2(175, 1, 28, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_admid"]
atlas = ExtResource("8_huc6j")
region = Rect2(146, 1, 28, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8ewu"]
atlas = ExtResource("8_huc6j")
region = Rect2(117, 1, 28, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_w85io"]
atlas = ExtResource("8_huc6j")
region = Rect2(88, 1, 28, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_8tl5q"]
atlas = ExtResource("8_huc6j")
region = Rect2(59, 1, 28, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycxxh"]
atlas = ExtResource("8_huc6j")
region = Rect2(30, 1, 28, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_yadxy"]
atlas = ExtResource("8_huc6j")
region = Rect2(291, 1, 28, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_oiblp"]
atlas = ExtResource("8_huc6j")
region = Rect2(1, 1, 28, 54)

[sub_resource type="SpriteFrames" id="SpriteFrames_fpfa8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ka1gi")
}],
"loop": true,
"name": &"damaged 1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmple")
}],
"loop": true,
"name": &"damaged 2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fk6ll")
}],
"loop": true,
"name": &"damaged 3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r233r")
}],
"loop": true,
"name": &"damaged 4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_admid")
}],
"loop": true,
"name": &"damaged 5",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8ewu")
}],
"loop": true,
"name": &"damaged 6",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w85io")
}],
"loop": true,
"name": &"damaged 7",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8tl5q")
}],
"loop": true,
"name": &"damaged 8",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycxxh")
}],
"loop": true,
"name": &"damaged 9",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yadxy")
}],
"loop": true,
"name": &"damaged empty",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oiblp")
}],
"loop": true,
"name": &"damaged full",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wbryl"]
size = Vector2(23, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_24c18"]
atlas = ExtResource("16_f7s8f")
region = Rect2(0, 76, 78, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3wpn"]
atlas = ExtResource("16_f7s8f")
region = Rect2(81, 76, 78, 73)

[sub_resource type="SpriteFrames" id="SpriteFrames_j5k8u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_24c18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3wpn")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="CharacterBody2D" type="CharacterBody2D" groups=["can roll", "player"]]
process_mode = 1
top_level = true
z_index = 3
texture_filter = 1
scale = Vector2(1.7, 1.7)
floor_stop_on_slope = false
floor_block_on_wall = false
floor_max_angle = 1.55334
platform_floor_layers = 4294967041
platform_wall_layers = 1
script = ExtResource("1_ejbkl")
smoothed_angle = 0.2
jump_multiplier = 1.2
counter_velocity_influence_adjust = 5.0
running_accel = 50.0
Up_past_mach_accel = 7.5
up_accel = 6.7
inwall_gravity_limit = 1.0
wall_run_gravity_multiplier = 15.0
run_direction_gravity_multiplier = 5.0
wall_dive_gravity_multiplier = 1.0
dive_direction_gravity_multiplier = 0.5
walldive_switch_window = 0.4
run_buffer_duration = 0.1
afterimages_buffer_time_duration = 0.05
afterimages = ExtResource("2_42shm")
dust_clouds_buffer_time_duration = 0.008
dust_clouds = ExtResource("3_pbfsw")
water_pull = 2.0

[node name="jump_ball" type="Area2D" parent="."]
visible = false
position = Vector2(1, 0)
metadata/_edit_group_ = true

[node name="jump_ball_collision" type="CollisionShape2D" parent="jump_ball"]
shape = SubResource("CircleShape2D_4plqc")
debug_color = Color(1, 1, 1, 0.419608)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_as_relative = false
texture_repeat = 1
position = Vector2(-1.26218e-29, -5.88235)
scale = Vector2(0.6, 0.578)
sprite_frames = ExtResource("3_op7ga")
animation = &"Running"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1.1920929e-07)
shape = SubResource("CapsuleShape2D_7l80f")

[node name="DashDurationTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="DashEffectTimer" type="Timer" parent="."]
wait_time = 0.001

[node name="wallshotTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="wallclingCooldown" type="Timer" parent="."]
wait_time = 0.001
one_shot = true

[node name="fallingmomentumTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="possiblewallrunTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(5.96046e-08, 1.19209e-07)
zoom = Vector2(0.888, 0.888)
position_smoothing_speed = 35.0
rotation_smoothing_speed = 7.0
drag_vertical_enabled = true
drag_vertical_offset = -1.0
drag_top_margin = 0.1
script = ExtResource("4_pnbbg")

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="skates_on_off_Button" type="AnimatedSprite2D" parent="Camera2D/CanvasLayer"]
modulate = Color(0.921569, 0.858824, 0.988235, 1)
light_mask = 3
visibility_layer = 3
texture_filter = 1
position = Vector2(215, 50)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_fyifh")
animation = &"skates_off pressed"
autoplay = "skates_off"

[node name="healthbar" type="AnimatedSprite2D" parent="Camera2D/CanvasLayer"]
texture_repeat = 1
position = Vector2(40, 76)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_fpfa8")
animation = &"damaged 1"

[node name="jump_soundfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_80ayv")

[node name="jump_grunt1sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_2o4qy")
volume_db = 5.0

[node name="cayoteTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="jumpbufferTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_p6lsp")

[node name="detector" type="Area2D" parent="."]
visible = false
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detector"]
position = Vector2(1.5, 0.5)
shape = SubResource("RectangleShape2D_wbryl")

[node name="enemybouncesfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_fi3wb")
volume_db = 15.407

[node name="rail_grind" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_lo3bv")

[node name="rail_contact" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_tntrf")

[node name="pass_through_rails" type="Timer" parent="."]
wait_time = 0.3

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.529412)
z_index = -4
texture = ExtResource("15_4mfyh")

[node name="star_dash_header" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(0.9, 0.8)
sprite_frames = SubResource("SpriteFrames_j5k8u")
frame_progress = 0.167624

[node name="wallkickTimer" type="Timer" parent="."]
wait_time = 0.16
one_shot = true

[node name="wallkicklockTimer" type="Timer" parent="."]
wait_time = 0.13

[node name="wall_kick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("17_en47m")
volume_db = 12.0
pitch_scale = 0.8

[node name="dodgeslideTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="dodgeslidecooldownTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="slidejumpTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="dashin" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("18_hkrpb")
volume_db = 14.0

[node name="Muzzle" type="Marker2D" parent="."]

[node name="ChargeShotTimer" type="Timer" parent="."]

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="InvincebilityframesTimer" type="Timer" parent="."]
one_shot = true

[node name="Neck" type="Node2D" parent="."]
position = Vector2(2.019484e-28, -2.9411764)

[node name="Scarf2D" type="Node2D" parent="."]
z_index = -1
z_as_relative = false
scale = Vector2(1.0000001, 1.0000001)
script = ExtResource("17_op7ga")
segment_count = 6
slimness = 0.5
stiffness = 0.95
flopiness = 0.6
snake_intensity = 0.5
head_offset = Vector2(1.7, -8)
stretch_limit = 1.5
extension_multiplier = 1.5
velocity_influence = 0.001

[node name="direction_change_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="possibewalldiveTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="wallrunning_wallchecker" type="RayCast2D" parent="."]
target_position = Vector2(0, 24.117647)
collision_mask = 2

[node name="wallkick_lockR" type="Node2D" parent="."]
script = ExtResource("18_pylmc")

[node name="wallkicklockR1" type="RayCast2D" parent="wallkick_lockR"]
scale = Vector2(1.7, 1.7)
target_position = Vector2(15, 0)
collision_mask = 2

[node name="wallkicklockR2" type="RayCast2D" parent="wallkick_lockR"]
scale = Vector2(1.7, 1.7)
target_position = Vector2(15, -10)
collision_mask = 2

[node name="wallkicklockR3" type="RayCast2D" parent="wallkick_lockR"]
scale = Vector2(1.7, 1.7)
target_position = Vector2(15, 10)
collision_mask = 2

[node name="wallkick_lockL" type="Node2D" parent="."]
script = ExtResource("19_pbfsw")

[node name="wallkicklockL1" type="RayCast2D" parent="wallkick_lockL"]
scale = Vector2(1.7, 1.7)
target_position = Vector2(-15, -10)
collision_mask = 2

[node name="wallkicklockL2" type="RayCast2D" parent="wallkick_lockL"]
scale = Vector2(1.7, 1.7)
target_position = Vector2(-15, 0)
collision_mask = 2

[node name="wallkicklockL3" type="RayCast2D" parent="wallkick_lockL"]
scale = Vector2(1.7, 1.7)
target_position = Vector2(-15, 10)
collision_mask = 2

[node name="dust_cloud_setter" type="Node2D" parent="."]
position = Vector2(0, 18)

[connection signal="body_entered" from="jump_ball" to="." method="_on_jump_ball_body_entered"]
[connection signal="timeout" from="DashDurationTimer" to="." method="_on_dash_duration_timer_timeout"]
[connection signal="timeout" from="DashEffectTimer" to="." method="_on_dash_effect_timer_timeout"]
[connection signal="timeout" from="wallshotTimer" to="." method="_on_wallshot_timer_timeout"]
[connection signal="timeout" from="wallclingCooldown" to="." method="_on_wallcling_cooldown_timeout"]
[connection signal="timeout" from="fallingmomentumTimer" to="." method="_on_fallingmomentum_timer_timeout"]
[connection signal="timeout" from="possiblewallrunTimer" to="." method="_on_possiblewallrun_timer_timeout"]
[connection signal="timeout" from="cayoteTimer" to="." method="_on_cayote_timer_timeout"]
[connection signal="timeout" from="jumpbufferTimer" to="." method="_on_jumpbuffer_timer_timeout"]
[connection signal="area_entered" from="detector" to="." method="_on_detector_area_entered"]
[connection signal="area_exited" from="detector" to="." method="_on_detector_area_exited"]
[connection signal="timeout" from="pass_through_rails" to="." method="_on_pass_through_rails_timeout"]
[connection signal="timeout" from="wallkickTimer" to="." method="_on_wallkick_timer_timeout"]
[connection signal="timeout" from="wallkicklockTimer" to="." method="_on_wallkicklock_timer_timeout"]
[connection signal="timeout" from="dodgeslideTimer" to="." method="_on_dodgeslide_timer_timeout"]
[connection signal="timeout" from="dodgeslidecooldownTimer" to="." method="_on_dodgeslidecooldown_timer_timeout"]
[connection signal="timeout" from="slidejumpTimer" to="." method="_on_slidejump_timer_timeout"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_on_knockback_timer_timeout"]
[connection signal="timeout" from="InvincebilityframesTimer" to="." method="_on_invincebilityframes_timer_timeout"]
[connection signal="timeout" from="direction_change_timer" to="." method="_on_direction_change_timer_timeout"]
[connection signal="timeout" from="possibewalldiveTimer" to="." method="_on_possibewalldive_timer_timeout"]
